# vaultwallet

./: .gitignore  README.md
vaultwallet/: .gitignore  README.md  app.config.ts  app.vue  nuxt.config.ts  package.json
vaultwallet-core/: .gitignore  Cargo.toml  README.md
vaultwallet-core/src/: error.rs  lib.rs  settings.rs
vaultwallet-core/src/crypto/: cipher.rs  hash.rs  mod.rs  random.rs
vaultwallet-core/src/crypto/kdf/: aes_kdf.rs  argon2.rs  mod.rs
vaultwallet-core/src/db/: database.rs  entry.rs  entry_attributes.rs  group.rs  metadata.rs  mod.rs
vaultwallet-core/src/format/: header.rs  hmac_block.rs  inner_header.rs  mod.rs  xml.rs
vaultwallet-core/src/keys/: composite_key.rs  mod.rs
vaultwallet-core/tests/: round_trip.rs  tamper.rs
vaultwallet/assets/css/: main.css
vaultwallet/components/: VaultSettingsModal.vue  WindowTitleBar.vue
vaultwallet/components/vault/: VaultTreeNode.vue
vaultwallet/composables/: useSecureClipboard.ts  useVaultIdleLock.ts  useVaultSettings.ts  useVaultTauri.ts
vaultwallet/config/: exchange-wallets.json
vaultwallet/pages/: index.vue  settings.vue
vaultwallet/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
vaultwallet/src-tauri/capabilities/: default.json
vaultwallet/src-tauri/src/: biometric.rs  lib.rs  main.rs  solana.rs
vaultwallet/types/: funding.ts  tauri-globals.d.ts  vault.ts
vaultwallet/utils/: accentPalette.ts  fundingPayload.ts
