[package]
name = "vaultwallet-core"
version = "0.1.0"
edition = "2021"
description = "VaultWallet database format: KDBX 4.1-compatible crypto and serialization"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
aes = "0.8"
argon2 = "0.5"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
chacha20 = "0.9"
cipher = { version = "0.4", features = ["block-padding"] }
flate2 = "1.0"
hmac = "0.12"
quick-xml = { version = "0.31", features = ["serialize"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
subtle = "2.5"
twofish = "0.7"
uuid = { version = "1.6", features = ["v4"] }
zeroize = { version = "1.7", features = ["alloc"] }

[dev-dependencies]
tempfile = "3.10"
