[package]
name = "vaultwallet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "vaultwallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.6", features = ["v4"] }
vaultwallet-core = { path = "../../vaultwallet-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bs58 = "0.5"
ed25519-dalek = "2.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tokio = { version = "1", features = ["time"] }
rand = "0.8"
